tests/csgrep/0112-gcc-parser-ubsan-bt-stdin.txt
byteorder.h:83:9: runtime error: load of misaligned address 0x556e3e877805 for type 'const uint32_t', which requires 4 byte alignment
0x556e3e877805: note: pointer points here
 b5 21 00 00 6c 00 00  07 ff 65 a0 b8 03 05 2f  74 65 78 74 0e 70 d6 f0  d2 4d 97 21 a4 81 00 00  a0
             ^
    #0 0x556e3dc9349f in IVALu /builddir/build/BUILD/rsync-3.2.3/byteorder.h:83
    #1 0x556e3dc9349f in IVAL /builddir/build/BUILD/rsync-3.2.3/byteorder.h:124
    #2 0x556e3dc9349f in raw_read_int /builddir/build/BUILD/rsync-3.2.3/io.c:921
    #3 0x556e3dc9349f in read_a_msg /builddir/build/BUILD/rsync-3.2.3/io.c:1441
    #4 0x556e3dc93b23 in read_buf /builddir/build/BUILD/rsync-3.2.3/io.c:1853
    #5 0x556e3dc958d1 in read_ndx /builddir/build/BUILD/rsync-3.2.3/io.c:2241
    #6 0x556e3dc31316 in read_ndx_and_attrs /builddir/build/BUILD/rsync-3.2.3/rsync.c:330
    #7 0x556e3dc43f51 in recv_files /builddir/build/BUILD/rsync-3.2.3/receiver.c:548
    #8 0x556e3dc664b2 in do_recv /builddir/build/BUILD/rsync-3.2.3/main.c:1048
    #9 0x556e3dc66fc7 in do_server_recv /builddir/build/BUILD/rsync-3.2.3/main.c:1219
    #10 0x556e3dc66fc7 in start_server /builddir/build/BUILD/rsync-3.2.3/main.c:1253
    #11 0x556e3dc67418 in child_main /builddir/build/BUILD/rsync-3.2.3/main.c:1226
    #12 0x556e3dcca5f2 in local_child /builddir/build/BUILD/rsync-3.2.3/pipe.c:166
    #13 0x556e3dc0bb33 in do_cmd /builddir/build/BUILD/rsync-3.2.3/main.c:650
    #14 0x556e3dc0bb33 in start_client /builddir/build/BUILD/rsync-3.2.3/main.c:1576
    #15 0x556e3dc0bb33 in main /builddir/build/BUILD/rsync-3.2.3/main.c:1819
    #16 0x7fc94402950f in __libc_start_call_main (/lib64/libc.so.6+0x2950f)
    #17 0x7fc9440295c8 in __libc_start_main_alias_2 (/lib64/libc.so.6+0x295c8)
    #18 0x556e3dc0f324 in _start (/builddir/build/BUILD/rsync-3.2.3/rsync+0xbe324)

test.c:2:23: runtime error: load of null pointer of type 'char'
    #0 0x401147 in main /home/lukas/csdiff/tests/csgrep/test.c:2
    #1 0x7f7851249b49 in __libc_start_call_main (/lib64/libc.so.6+0x27b49) (BuildId: 245240a31888ad5c11bbc55b18e02d87388f59a9)
    #2 0x7f7851249c0a in __libc_start_main_alias_2 (/lib64/libc.so.6+0x27c0a) (BuildId: 245240a31888ad5c11bbc55b18e02d87388f59a9)
    #3 0x401064 in _start (/home/lukas/csdiff/tests/csgrep/a.out+0x401064) (BuildId: 687486336bec7797f956f83fcb24faef18f1365c)

sqlite3.c:78798:14: runtime error: load of address 0xffffe5ed7a60 with insufficient space for an object of type 'struct MemPage *'
0xffffe5ed7a60: note: pointer points here
 55 55 ff ff  18 cc f8 f0 aa aa 00 00  d8 f4 f8 f0 aa aa 00 00  90 7a ed e5 ff ff 00 00  90 98 e6 c3
              ^
    #0 0xaaaac3eeb080 in balance_nonroot /builddir/build/BUILD/sqlite-src-3450300/sqlite3.c:78798
    #1 0xaaaac3eebbe4 in balance /builddir/build/BUILD/sqlite-src-3450300/sqlite3.c:79258
    #2 0xaaaac3eee854 in sqlite3BtreeInsert /builddir/build/BUILD/sqlite-src-3450300/sqlite3.c:79713
    #3 0xaaaac3f26af4 in sqlite3VdbeExec /builddir/build/BUILD/sqlite-src-3450300/sqlite3.c:98386
    #4 0xaaaac3f44258 in sqlite3Step /builddir/build/BUILD/sqlite-src-3450300/sqlite3.c:90778
    #5 0xaaaac3f44258 in sqlite3_step /builddir/build/BUILD/sqlite-src-3450300/sqlite3.c:90839
    #6 0xaaaac4178538 in fts5DataWrite /builddir/build/BUILD/sqlite-src-3450300/sqlite3.c:239717
    #7 0xaaaac418c4fc in fts5WriteFlushLeaf /builddir/build/BUILD/sqlite-src-3450300/sqlite3.c:243173
    #8 0xaaaac418ce70 in fts5WriteAppendPoslistData /builddir/build/BUILD/sqlite-src-3450300/sqlite3.c:243336
    #9 0xaaaac418ce70 in fts5MergeChunkCallback /builddir/build/BUILD/sqlite-src-3450300/sqlite3.c:243494
    #10 0xaaaac4184390 in fts5ChunkIterate /builddir/build/BUILD/sqlite-src-3450300/sqlite3.c:242342
    #11 0xaaaac4196718 in fts5IndexMergeLevel /builddir/build/BUILD/sqlite-src-3450300/sqlite3.c:243611
    #12 0xaaaac4198a08 in fts5IndexMerge /builddir/build/BUILD/sqlite-src-3450300/sqlite3.c:243733
    #13 0xaaaac4199744 in fts5IndexAutomerge /builddir/build/BUILD/sqlite-src-3450300/sqlite3.c:243769
    #14 0xaaaac4199744 in fts5FlushOneHash /builddir/build/BUILD/sqlite-src-3450300/sqlite3.c:244491
    #15 0xaaaac4199744 in fts5IndexFlush /builddir/build/BUILD/sqlite-src-3450300/sqlite3.c:244508
    #16 0xaaaac41c9340 in sqlite3Fts5IndexSync /builddir/build/BUILD/sqlite-src-3450300/sqlite3.c:245168
    #17 0xaaaac41c9340 in sqlite3Fts5StorageSync /builddir/build/BUILD/sqlite-src-3450300/sqlite3.c:252166
    #18 0xaaaac41b0684 in sqlite3Fts5FlushToDisk /builddir/build/BUILD/sqlite-src-3450300/sqlite3.c:250555
    #19 0xaaaac41b0684 in fts5SyncMethod /builddir/build/BUILD/sqlite-src-3450300/sqlite3.c:249687
    #20 0xaaaac3f0dc64 in sqlite3VtabSync /builddir/build/BUILD/sqlite-src-3450300/sqlite3.c:155322
    #21 0xaaaac3f0dc64 in vdbeCommit /builddir/build/BUILD/sqlite-src-3450300/sqlite3.c:87306
    #22 0xaaaac3f0dc64 in sqlite3VdbeHalt /builddir/build/BUILD/sqlite-src-3450300/sqlite3.c:87780
    #23 0xaaaac3f322e4 in sqlite3VdbeExec /builddir/build/BUILD/sqlite-src-3450300/sqlite3.c:93967
    #24 0xaaaac3f44258 in sqlite3Step /builddir/build/BUILD/sqlite-src-3450300/sqlite3.c:90778
    #25 0xaaaac3f44258 in sqlite3_step /builddir/build/BUILD/sqlite-src-3450300/sqlite3.c:90839
    #26 0xaaaac3e4f83c in dbEvalStep /builddir/build/BUILD/sqlite-src-3450300/src/tclsqlite.c:1703
    #27 0xaaaac3e53cf4 in DbObjCmd /builddir/build/BUILD/sqlite-src-3450300/src/tclsqlite.c:2834
    #28 0xffff97f1f278 in TclNRRunCallbacks (/lib64/libtcl8.6.so+0x3f278) (BuildId: 6681f6d2989dff0182ead7761158953094731212)
    #29 0xffff97fb2a10  (/lib64/libtcl8.6.so+0xd2a10) (BuildId: 6681f6d2989dff0182ead7761158953094731212)
    #30 0xffff97fb672c  (/lib64/libtcl8.6.so+0xd672c) (BuildId: 6681f6d2989dff0182ead7761158953094731212)
    #31 0xffff97f1f278 in TclNRRunCallbacks (/lib64/libtcl8.6.so+0x3f278) (BuildId: 6681f6d2989dff0182ead7761158953094731212)
    #32 0xffff97f414c8  (/lib64/libtcl8.6.so+0x614c8) (BuildId: 6681f6d2989dff0182ead7761158953094731212)
    #33 0xffff97f1f278 in TclNRRunCallbacks (/lib64/libtcl8.6.so+0x3f278) (BuildId: 6681f6d2989dff0182ead7761158953094731212)
    #34 0xffff97f2409c  (/lib64/libtcl8.6.so+0x4409c) (BuildId: 6681f6d2989dff0182ead7761158953094731212)
    #35 0xffff97f248e8 in Tcl_Eval (/lib64/libtcl8.6.so+0x448e8) (BuildId: 6681f6d2989dff0182ead7761158953094731212)
    #36 0xffff97f26d20 in Tcl_GlobalEval (/lib64/libtcl8.6.so+0x46d20) (BuildId: 6681f6d2989dff0182ead7761158953094731212)
    #37 0xaaaac3d212d8 in main /builddir/build/BUILD/sqlite-src-3450300/src/tclsqlite.c:4067
    #38 0xffff97450b18 in __libc_start_call_main (/lib64/libc.so.6+0x30b18) (BuildId: 3f82f45ee0e1b19906cd2d3fd296899ac039e47d)
    #39 0xffff97450bf8 in __libc_start_main_alias_1 (/lib64/libc.so.6+0x30bf8) (BuildId: 3f82f45ee0e1b19906cd2d3fd296899ac039e47d)
    #40 0xaaaac3d2152c in _start (/builddir/build/BUILD/sqlite-src-3450300/testfixture+0x3d152c) (BuildId: b4a4d7d64793b93a2a7cb13668ce679845aba51b)

